--- a/estilo.css
+++ b/estilo.css
@@ -1,13 +1,16 @@
 * {
-    margin: 100;
-    padding: 100;
+    margin: 20px;
+    
+   /* margin-left: 25%;
+    margin-right: 50%;*/
   }
   h1 {
     text-align: center;
+    
   }
 
   button { 
-    background-position: 50%;
+    background-position: 10%;
     background-color: green;
     font-size: large;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -15,9 +18,23 @@
   input{
     font-size: large;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    padding-left: 30px;
+    ;
   }
 
   p{
-    background-color: aquamarine;
+    padding-top: 1%;
+    text-align: center;
+    font-size: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+  .margen {
+    background-color: whitesmoke;
+    border: 3px solid;
+    width: 550px;
+    height: 300px;
+    /*align-content: center;*/
+    margin-left: 35%;
+
   }
